# rust-trezor-api

./: Cargo.toml  README.md  generate-messages.py  generate-protos.sh  rustfmt.toml
.github/workflows/: ci.yml
examples/: change_pin.rs  features.rs  find.rs  interaction.rs  sign_message.rs  sign_tx.rs
scripts/: generate-messages.py  generate-protos.sh
src/: error.rs  lib.rs  messages.rs  utils.rs
src/client/: bitcoin.rs  common.rs  ethereum.rs  mod.rs
src/flows/: sign_tx.rs
src/protos/: messages.rs  messages_bitcoin.rs  messages_bootloader.rs  messages_cardano.rs  messages_common.rs  messages_crypto.rs  messages_debug.rs  messages_ethereum.rs  messages_ethereum_eip712.rs  messages_lisk.rs  messages_management.rs  messages_monero.rs  messages_nem.rs  messages_ontology.rs  messages_ripple.rs  messages_stellar.rs  messages_tezos.rs  messages_tron.rs  mod.rs
src/transport/: error.rs  hid.rs  mod.rs  protocol.rs  udp.rs  webusb.rs
