[package]
name = "trezor-client"
version = "0.1.0"
authors = ["joshie", "romanz", "Steven Roose <steven@stevenroose.org>"]
license = "CC0-1.0"
homepage = "https://github.com/joshieDo/rust-trezor-api"
repository = "https://github.com/joshieDo/rust-trezor-api"
description = "Client library for interfacing with Trezor hardware wallet devices."
keywords = ["ethereum", "bitcoin", "trezor", "wallet"]
readme = "README.md"
exclude = [".github/", "examples/", "protos/", "generate-protos.sh", "rustfmt.toml"]
edition = "2021"

[dependencies]
protobuf = "3.2"
byteorder = "1.4"
hidapi-rusb = { version = "1.3" }
rusb = "0.9"

log = "0.4"
hex = { version = "0.4", default-features = false, features = ["std"] }
thiserror = "1.0"

# bitcoin
bitcoin = { version = "0.30", optional = true }
unicode-normalization = { version = "0.1.22", optional = true }

# ethereum
primitive-types = { version = "0.12", default-features = false, optional = true }

[dev-dependencies]
fern = "0.6"

[features]
default = ["bitcoin", "ethereum"]

# Client implementations
bitcoin = ["dep:bitcoin", "unicode-normalization"]
ethereum = ["primitive-types"]

# Just protobufs
cardano = []
lisk = []
monero = []
nem = []
ontology = []
ripple = []
stellar = []
tezos = []
tron = []
